🐛 fix render on mobile

--- a/themes/hadrienmp/assets/sass/article.scss
+++ b/themes/hadrienmp/assets/sass/article.scss
@@ -17,7 +17,13 @@ p {
 
 .row {
   display: flex;
+  flex-wrap: wrap;
   gap: 1.6rem;
+  justify-content: center;
+  div:nth-child(2) {
+    flex : 1;
+    min-width: 18rem;
+  }
 }
 
 article {
